# MCGPU_sim

./: .gitignore  HOWTORUN.md  MC-GPU_create_material_data_rodrigo.f  MC-GPU_v1.5b.cu  MC-GPU_v1.5b.h  MC-GPU_v1.5b.x  Makefile  materialExplanation.md  noteCodice.md  output_fast.out
Geant4ExtractMaterialData/: CMakeLists.txt  main.cpp  makerayleigh2.py  rayleigh_AL_original.txt  rayleigh_Al_rita_final.txt  rayleigh_comparer.py  rayleigh_functions.py
Geant4ToMCGPU/: CMakeLists.txt  main.cpp
MaterialDataCheckPy/: RayleighFF_G4_Al.txt  rayleight_plotter.py
example_simulations/: MC-GPU_v1.5b.x  MC-GPU_v1.5b_scattered_phantom_mammo_fast.in  binning.py  cbct_circular.in  cbct_circular.out  cbct_circular_head.in  create_cylinder.py  generate_spekpy_spectrum.py  output_fast.out
example_simulations/material/: Al_5-120keV_xraylib.mcgpu  Al__5-120keV.mcgpu  air__5-120keV.mcgpu  generate_mcgpu_material.py  icrp_air.mcgpu  mcgpu_material_converter.py  mean_free_path_plotter.py  muscle__5-120keV.mcgpu  polystyrene__5-120keV.mcgpu  rayleigh.py  rayleigh_AL_original.txt  rayleigh_Al.txt  rayleigh_comparer.py
example_simulations/material/G4_ICRP_female/: MC-GPU_material_config.txt  (+25 more)
example_simulations/spectrum/: 120kV_Al150um_Brass60um.spc  80kV_Al350um.spc  README.md  mcgpu_spectrum_Mo_Standard.spc  plot_spc.py  plot_spc_simple.py  spekpy_list_mat.py  supported_materials.txt  test30kv_rh_be_spekpy.spc  test30kv_rhodioum_beryllium.spc  test30kv_rhodioum_beryllium.txt  test_from_default.spc  test_from_default_photons_mm2.spc
phantom/: input_cylinder_snippet.txt
(+36 files in other folders)
